Upload to GitHub Pages

--- a/index.html
+++ b/index.html
@@ -13,7 +13,7 @@
 				<header>
 					<span class="image avatar"><img src="images/CarloGrigioni.jpg" alt="" /></span>
 					<h1 id="logo"><a href="#">Carlo Grigioni</a></h1>
-					<p>Data Science and AI student</p>
+					<p>Data Science and AI student at SUPSI</p>
 				</header>
 				<nav id="nav">
 					<ul>
