--- a/index.html
+++ b/index.html
@@ -16,17 +16,21 @@
 <div class="container">
 	<form action="page2.html" method="get">
 		<label for="option1">
-			<input type="radio" name="choice" value="Option 1" id="option1"> Option 1
+			<input type="radio" name="choice" value="Rosso" id="option1"> Rosso
 		</label>
   <br>
 		<label for="option2">
-			<input type="radio" name="choice" value="Option 2" id="option2"> Option 2
+			<input type="radio" name="choice" value="Giallo" id="option2"> Giallo
 		</label>
   <br>
 		<label for="option3">
-			<input type="radio" name="choice" value="Option 3" id="option3"> Option 3
+			<input type="radio" name="choice" value="Verde" id="option3"> Verde
 		</label>
   <br>
+		<label for="option4">
+			<input type="radio" name="choice" value="Verde" id="option4"> Blu
+		</label>
+	<br>
 		<input type="submit" value="Submit">
 	</form>
 </div>
