--- a/page2.html
+++ b/page2.html
@@ -17,6 +17,7 @@
         return pair[1];
       }
     }
+	document.getElementById("risultato").innerHTML = pair[1];
     return false;
   }
 
@@ -28,6 +29,7 @@
 
 <div class="container">
   <h3>Sei:</h3>
+  <p id="risultato"></p>
 </div>
 </body>
 </html>
