--- a/page2.html
+++ b/page2.html
@@ -22,7 +22,7 @@
 
   var choice = getQueryVariable("choice");
   console.log(choice); // Outputs the value of the "choice" parameter
-  document.getElementById("risultato").innerHTML = choice
+  document.getElementById("risultato").innerHTML = choice;
 </script>
 </head>
 <body>
