--- a/page2.html
+++ b/page2.html
@@ -21,15 +21,14 @@
   }
 
   var choice = getQueryVariable("choice");
-  console.log(choice); // Outputs the value of the "choice" parameter
-  document.getElementById("risultato").innerHTML = choice;
+  document.getElementById("output").innerHTML = choice;
 </script>
 </head>
 <body>
 
 <div class="container">
   <h3>Sei:</h3>
-  <p id="risultato">_</p>
+  <p id="output"></p>
 </div>
 </body>
 </html>
