--- a/page2.html
+++ b/page2.html
@@ -13,7 +13,7 @@
 
 <div class="container">
   <h3>Sei:</h3>
-  <p id="output"></p>
+  <h5 style="font-weight: bold;" id="output"></h5>
 </div>
 </body>
   <script>
