--- a/index.html
+++ b/index.html
@@ -31,7 +31,7 @@
 			<input type="radio" name="choice" value="Verde" id="option4"> Blu
 		</label>
 	<br>
-		<input type="submit" value="Submit">
+		<input type="submit" value="Continua">
 	</form>
 </div>
 </body>
