--- a/page2.html
+++ b/page2.html
@@ -13,7 +13,7 @@
 
 <div class="container">
   <h3>Sei:</h3>
-  <h5 style="font-weight: bold;" id="output"></h5>
+  <h5 id="output" style="font-weight: bold;"></h5>
 </div>
 </body>
   <script>
