--- a/index.html
+++ b/index.html
@@ -14,21 +14,25 @@
 </div>
 
 <div class="container">
-	<form action="page2.html" method="get">
+  <h3>La tua serie TV preferita:</h3>
+</div>
+
+<div class="container">
+	<form action="q2.html" method="get">
 		<label for="option1">
-			<input type="radio" name="choice" value="Rosso" id="option1"> Rosso
+			<input type="radio" name="choice" value="rosso" id="option1"> il trono di spade
 		</label>
   <br>
 		<label for="option2">
-			<input type="radio" name="choice" value="Giallo" id="option2"> Giallo
+			<input type="radio" name="choice" value="bianco" id="option2"> vatican girl
 		</label>
   <br>
 		<label for="option3">
-			<input type="radio" name="choice" value="Verde" id="option3"> Verde
+			<input type="radio" name="choice" value="verde" id="option3"> teenwolf
 		</label>
   <br>
 		<label for="option4">
-			<input type="radio" name="choice" value="Verde" id="option4"> Blu
+			<input type="radio" name="choice" value="azzurro" id="option4"> # non ho mai
 		</label>
 	<br>
 		<input type="submit" value="Continua">
