--- a/q2.html
+++ b/q2.html
@@ -20,6 +20,10 @@
 			<input type="radio" name="choice" value="rosso" id="option1"> parlantina
 		</label>
   <br>
+  		<label for="option4">
+			<input type="radio" name="choice" value="azzurro" id="option4"> generosità
+		</label>
+	<br>
 		<label for="option2">
 			<input type="radio" name="choice" value="bianco" id="option2"> forza di volontà
 		</label>
