--- a/q3.html
+++ b/q3.html
@@ -19,6 +19,10 @@
 		<label for="option1">
 			<input type="radio" name="choice" value="rosso" id="option1"> il giudice
 		</label>
+    <br>
+		<label for="option3">
+			<input type="radio" name="choice" value="verde" id="option3"> il militare
+		</label>
   <br>
 		<label for="option2">
 			<input type="radio" name="choice" value="bianco" id="option2"> lo scrittore
